[package]
name = "bitcoin-zmq"
version = "0.1.0"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
A library providing a relatively thin wrapper around Bitcoin ZMQ, 
allowing the construction of asynchronous streams of transaction 
or block data.
"""

[dependencies]
futures-zmq = "0.5.0"
zmq = "0.9.1"
futures = "0.1.28"
bus_queue = "0.4.1"
bytes = "0.4.12"

[dev-dependencies]
tokio = "0.1.22"
hex = "0.3.2"
