[package]
name = "bitcoin-zmq"
version = "0.2.0-alpha"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/hlb8122/rust-bitcoin-zmq"
repository = "https://github.com/hlb8122/rust-bitcoin-zmq"
description = """
A library providing a relatively thin wrapper around Bitcoin ZMQ, 
allowing the construction of asynchronous streams of transaction 
or block data.
"""
keywords = ["bitcoin", "zmq", "non-blocking", "stream"]
categories = ["asynchronous", "concurrency", "cryptography::cryptocurrencies"]
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "hlb8122/rust-bitcoin-zmq" }

[dependencies]
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
futures-zmq = "0.5.0"
zmq = "0.9.1"

[dev-dependencies]
hex = "0.3.2"
tokio = "0.2.0-alpha.6"
